broken layout fixed

--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ h2 {
   User-select: none;
 }
 
+#player .far:last-of-type,
+#computer .far:last-of-type {
+  margin-right: 0;
+}
 
 #player .far,
 #player .choice {
